--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
     <title>Personality Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
 </head>
 <body>
     <div id="quiz-container">
         <div id="question-container">
             <h2 id="question-text"></h2>
             <div id="options-container"></div>
+            <button id="next-button" class="option-button" style="display: none;">Next</button>
             <div id="progress"></div>
         </div>
         <div id="results-container" style="display: none;">
